# shs

./: README.md  cabal.project  flake.nix  shs.cabal
app/: Main.hs
