cabal-version:       3.0
name:                shs
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            Simple HTTP Haskell Server
description:         Simple HTTP Haskell Server.
Homepage:            http://github.com/blackheaven/shs

executable shs
  -- type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: app
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , bytestring
    , directory
    , filepath
    , http-types
    , optparse-applicative
    , text
    , time
    , uri-encode
    , wai
    , warp
  default-language: Haskell2010
